# fprogCode

./: README.md
02_Types/02_Types/Assignment/: AS_Types.lhs
03_Lists/03_Lists/Assignment/: PicturesASCII.hs
03_Lists/03_Lists/Lecture/WS_List_Functions/: WS_ListFunctions.xlsx
04_Functions/Assignment/: AS_Functions.hs
04_Functions/Lecture/: WS_Bindings.hs  WS_ConditionalBranchiing.hs  WS_PatternMatching.hs
05_FunctionsII/Assignment/: assignment5.hs
05_FunctionsII/Lecture/: WS_LambdaExpressions.hs
06_Recursion/Assignment/: AS_Recursion.hs
06_Recursion/Lecture/: ABRecusion.hs  WS_Recursion2.hs
07_Datatypes/Assignment/: AS_ArithmeticExpressions.lhs
07_Datatypes/Lecture/: WS_HandlingFailure.hs  WS_Shapes.lhs
08_IO/Assignment/: TasksDB.txt  todoSol.hs
08_IO/Lecture/: MiniCalc.hs
08_IO/Lecture/WS_Webclient/: Main.hs  WS-Webclient.cabal
08_IO/Lecture/WS_Webclient/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
09_Typeclasses/Lecture/: WS_MovableShapes.lhs
10_Modules_And_Project_Preparation/prereq/__MACOSX/: ._prereq
10_Modules_And_Project_Preparation/prereq/__MACOSX/prereq/: ._.git  ._.gitignore  ._README.md  ._app  ._data  ._lib  ._prereq.cabal  ._static  ._test
buch/: Exercice4_19.hs  Exercises10.hs
hadoo/: hadoo.cabal
hadoo/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hadoo/lib/Hadoo/: Factory.hs  Storage.hs  Web.hs
hadooSolution/hadoo/static/: todo.html
(+7 files in other folders)
